--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
 			<div class="d-inline" sec:authorize="isAuthenticated()">
 				
 				<span class="navbar-text mr-2">Hi! </span> 
-				<a th:href="@{/toEdit(id=${currentUser.id})}" sec:authorize="isAuthenticated()">
+				<a th:href="@{/toEdit/{id}(id=${currentUser.id})}" sec:authorize="isAuthenticated()">
 				    <span class="navbar-text mr-2" th:text="${currentUser.firstname}"> firstname </span> 
 				    <span class="navbar-text mr-2" th:text="${currentUser.lastname}"> lastname </span>
 				</a>
