--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -98,7 +98,7 @@
 						<td th:text="${user.firstname}"></td>
 						<td th:text="${user.lastname}"></td>
 						<td th:text="${user.email}"></td>
-						<td><a th:href="@{/toEdit(id=${user.id})}">edit</a></td>
+						<td><a th:href="@{/toEdit/{id}(id=${user.id})}">edit</a></td>
 						<td><a th:href="@{/delete(id=${user.id})}">delete</a></td>
 						<td th:text="${user.createdAt}"></td>
 						<td th:text="${user.updatedAt}"></td>
