--- a/src/main/resources/templates/todo_list.html
+++ b/src/main/resources/templates/todo_list.html
@@ -24,20 +24,23 @@
                 <li>
                     <a href="#"><span th:text="${time}"></span></a>
                 </li>
-                <!-- <li><a href="#"><form action="/logout" method="POST">
+                <li><a href="#">
+                <form action="/logout" method="POST">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <input type="submit" class="btn btn-default" value="Logout" />
-                </form></a></li> -->
+                </form></a>
+                </li> 
             </ul>
         </div>
     </nav>
     <form action="/createTodo" method="POST">
         <div class="row form-row">
-           <!--  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
- -->            <div class="col-md-4"><i class="fa fa-plus"></i> Important
+           <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <div class="col-md-4"><i class="fa fa-plus"></i> Important
                 <hr/>
                 <div id="impLists" th:each="imp_list : ${impLists}">
                     <div class="alert alert-info" role="alert">
+                    	<input type="checkbox" aria-label="done or not" th:checked="${imp_list.done}" >
                         <strong th:text="${imp_list.createdBy}"></strong>
                         <p th:text="${imp_list.content}"></p>
                     </div>
