--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -3,11 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+
 </head>
 <body>
 
-	<footer class="fixed-bottom" style="position: fixed; bottom: 0">
+	<footer th:fragment="footer" class="fixed-bottom" style="position: fixed; bottom: 0">
 		<div class="container">
 			<span class="text-muted">by Hannah</span>
 		</div>
