--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <!-- header.html -->
-<head th:fragment="header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title th:text="${title}"></title>
-   
-    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" /> 
-    <link rel="stylesheet" type="text/css" th:href="@{css/style.css}" />
+<head th:fragment="common_header(title,links)">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<title th:replace="${title}"></title>
+
+
+<!------ Common styles and scripts ------>
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+	
+<!-- custom css -->
+
+<!------/* Per-page placeholder for additional links */------>
+<th:block th:replace="${links}" />
+
 </head>
 
 <body>
-	<nav role="navigation" class="navbar navbar-default">
-		<div class="">
-			<a href="/" class="navbar-brand">Home</a>
-		</div>
-		<div class="navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="/login">Login</a></li>
-				<li><a href="/signup">Signu up</a></li>
 
-			</ul>
+
+<!-- navbar -->
+	<nav th:fragment="common_navbar" class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+		<div class="container">
+			<a class="navbar-brand" href="/"><img src="/images/rlogo.jpg" width="40" height="40"
+				alt="Home"><span class="align-middle font-weight-bold text-monospace">TechHelp</span></a>
+			<button class="navbar-toggler mr-0" type="button" data-toggle="collapse"
+				data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse mr-0" id="navbarsExample07">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item"><a class="p-2 text-dark" href="/about">About</span></a></li>
+					<li class="nav-item"><a class="p-2 text-dark" href="/contact">Contact</a></li>
+					<li class="nav-item"><a class="p-2 text-dark" href="/to-do"
+						sec:authorize="isAuthenticated()">Help List</a></li>
+					<li class="nav-item dropdown"><a class="p-2 text-dark" href="/show"
+						sec:authorize="hasRole('ROLE_ADMIN')">All data</a></li>
+				</ul>
+			</div>
+			<div class="d-inline" sec:authorize="isAuthenticated()">
+				
+				<span class="navbar-text mr-2">Hi! </span> 
+				<!-- <a th:href="@{/toEdit/{id}(id=${currentUser.id})}" sec:authorize="isAuthenticated()">
+				    <span class="navbar-text mr-2" th:text="${currentUser.firstname}"> firstname </span> 
+				    <span class="navbar-text mr-2" th:text="${currentUser.lastname}"> lastname </span>
+				</a> -->
+			</div>
+			<div class="d-inline">
+				<a class="nav-link d-inline" href="/logout" sec:authorize="isAuthenticated()">
+					<button class="btn btn-outline-primary my-2 my-sm-0" value="Logout">Logout</button>
+				</a> <a class="nav-link d-inline" href="/login" sec:authorize="isAnonymous()">
+					<button class="btn btn-outline-primary my-2 my-sm-0" value="login">Login</button>
+				</a> <a class="nav-link d-inline" href="/signup" sec:authorize="isAnonymous()">
+					<button class="btn btn-outline-primary my-2 my-sm-0" value="Sign Up">Sign Up</button>
+				</a>
+			</div>
 		</div>
 	</nav>
 </body>
