--- a/src/main/resources/templates/todo2.html
+++ b/src/main/resources/templates/todo2.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head th:replace="common/header :: common_header(~{::title},~{})">
 <meta charset="UTF-8">
-<title>Insert title here</title>
-<!-- Bootstrap CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
+<title>TodoList second try</title>
 <style>
 .active {
 	color: red;
 }
+.fixtb{
+ height: 500px;
+}
+tr{
+	height: 80px;
+}
 </style>
 </head>
 <body>
-<!-- 	<table border="1">
-		<thead>
-			<tr>
-				<th th:text="ID" />
-				<th th:text="Content" />
-				<th th:text="CreatedBy" />
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="todo, iStat : ${page.content}">
-				<td th:text="${todo.id}" />
-				<td th:text="${todo.content}" />
-				<td th:text="${todo.createdBy}" />
-			</tr>
-		</tbody>
-	</table> -->
-
-	<table class="table">
+<div th:insert="common/header :: common_navbar"></div>
+<div class="fixtb">
+	<table class="table table-striped table-hover tb">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -43,7 +29,8 @@
 		</thead>
 		<tbody>
 			<tr th:each="todo, iStat : ${page.content}">
-				<th scope="row"><input type="checkbox" aria-label="done or not" th:checked="${todo.done}" ></th>
+				<th scope="row"><input type="checkbox" aria-label="done or not"
+					th:checked="${todo.done}"></th>
 				<td th:text="${todo.id}" />
 				<td th:text="${todo.content}" />
 				<td th:text="${todo.createdBy}" />
@@ -52,73 +39,44 @@
 
 		</tbody>
 	</table>
-	<!-- <div th:if="${todoPage.totalPages > 0}" class="pagination"
-    th:each="pageNumber : ${pageNumbers}">
-    <a th:href="@{/listTodos(size=${todoPage.size}, page=${pageNumber})}"
-        th:text=${pageNumber}
-        th:class="${pageNumber==todoPage.number + 1} ? active"></a>
-</div> -->
-
-	<div class="pagination-div" th:if="${(page.totalPages le 3)}">
-		<span th:if="${page.hasPrevious()}"> <a
-			th:href="@{/todo2(page=${page.number-1},size=${page.size})}">Previous</a>
-		</span>
-		<th:block th:each="i: ${#numbers.sequence(0, page.totalPages - 1)}">
-			<span th:if="${page.number == i}" class="selected">[[${i}+1]]</span>
-			<span th:unless="${page.number == i}"> <a
-				th:href="@{/todo2(page=${i},size=${page.size})}">[[${i}+1]]</a>
-			</span>
-		</th:block>
-		<span th:if="${page.hasNext()}"> <a
-			th:href="@{/todo2(page=${page.number+1},size=${page.size})}">Next</a>
-		</span>
 	</div>
-	<hr>
 	<!-- 总数数大于3时 -->
 	<div th:if="${page.totalPages gt 3}" th:remove="tag" style="">
-		<span th:if="${page.hasPrevious()}"> <a
-			th:href="@{/todo2(page=${page.number-1},size=${page.size})}">Previous</a>
-		</span>
-		<th:block th:each="i: ${#numbers.sequence(0, page.totalPages - 1)}">
-			<span th:if="${page.number == i}" class="selected">[[${i}+1]]</span>
-			<span th:unless="${page.number == i}"> <a
-				th:href="@{/todo2(page=${i},size=${page.size})}">[[${i}+1]]</a>
-			</span>
-		</th:block>
-		<span th:if="${page.hasNext()}"> <a
-			th:href="@{/todo2(page=${page.number+1},size=${page.size})}">Next</a>
-		</span>
-
-
-
-		<li th:if="${page.number-1 ge 0}"><a href="#"
-			th:href="@{${curUrl}(page=${page.number}-1)}"
-			th:text="${page.number}"></a></li>
-		<li class="active"><span class="current_page line_height"
-			th:text="${page.number+1}"></span></li>
-		<li th:if="${page.number+1 lt page.totalPages}"><a href="#"
-			th:href="@{${curUrl}(page=${page.number}+1)}"
-			th:text="${page.number+2}"></a></li>
-
-		<h2>=== bootstrap following</h2>
 		<div class="btn-toolbar" role="toolbar"
 			aria-label="Toolbar with button groups">
 			<div class="btn-group mr-2" role="group" aria-label="First group">
-				<!-- 	<button type="button" class="btn btn-secondary"
-					th:if="${page.number-1 ge 0}">
-					<a href="#" th:href="@{${curUrl}(page=${page.number}-1)}"
-						th:text="${page.number}"></a>
-				</button> -->
+				
 				<a href="#" class="btn btn-primary btn-lg" role="button"
+					aria-pressed="true" th:if="${page.hasPrevious()}"
+					th:href="@{/todo2(page=${page.number-1},size=${page.size})}">Previous</a>
+				
+					
+				<a href="#" class="btn btn-primary btn-lg" role="button"
+					aria-pressed="true" th:if="${page.number+1 == page.totalPages}"
+					th:href="@{${curUrl}(page=${page.number-2})}"
+					th:text="${page.number-1}">when cp is final page </a> 	
+					
+					<a href="#" class="btn btn-primary btn-lg" role="button"
 					aria-pressed="true" th:if="${page.number-1 ge 0}"
-					th:href="@{${curUrl}(page=${page.number}-1)}"
-					th:text="${page.number}">Primary link</a> <a href="#"
-					class="btn btn-secondary btn-lg active" role="button"
-					aria-pressed="true" th:text="${page.number+1}">Current Page</a> <a
-					href="#" class="btn btn-primary btn-lg" role="button"
+					th:href="@{${curUrl}(page=${page.number-1})}"
+					th:text="${page.number}">cp-1</a> 
+				
+				<a href="#" class="btn btn-secondary btn-lg active" role="button"
+					aria-pressed="true" th:text="${page.number+1}">Current Page</a> 
+					
+				<a href="#" class="btn btn-primary btn-lg" role="button"
 					aria-pressed="true" th:if="${page.number+1 lt page.totalPages}"
 					th:href="@{${curUrl}(page=${page.number}+1)}"
-					th:text="${page.number+2}">Primary link</a>
+					th:text="${page.number+2}">cp+1</a>
+					
+				<a href="#" class="btn btn-primary btn-lg" role="button"
+					aria-pressed="true" th:if="${page.number==0}"
+					th:href="@{${curUrl}(page=${page.number+2})}"
+					th:text="${page.number+3}">when cp is first page </a> 	
+					
+				<a href="#" class="btn btn-primary btn-lg" role="button"
+					aria-pressed="true" th:if="${page.hasNext()}"
+					th:href="@{/todo2(page=${page.number+1},size=${page.size})}">Next</a>
 				<!-- 	<button type="button" class="btn btn-secondary"
 					th:if="${page.number+1 lt page.totalPages}">
 					<a href="#" th:href="@{${curUrl}(page=${page.number}+1)}"
@@ -130,7 +88,11 @@
 		</div>
 
 	</div>
-
+	
+	<!-- footer using thymeleaf fragment -->
+	<div th:insert="~{common/footer :: footer}"></div>
+	<hr>
+	<div th:insert="common/footer :: footer"></div>
 
 
 </body>
