customization to retrieve the record by current user name with pagination feature

--- a/src/main/resources/templates/todo2.html
+++ b/src/main/resources/templates/todo2.html
@@ -29,8 +29,8 @@ tr{
 		</thead>
 		<tbody>
 			<tr th:each="todo, iStat : ${page.content}">
-				<th scope="row"><input type="checkbox" aria-label="done or not"
-					th:checked="${todo.done}"></th>
+				<td scope="row"><input type="checkbox" aria-label="done or not"
+					th:checked="${todo.done}"></td>
 				<td th:text="${todo.id}" />
 				<td th:text="${todo.content}" />
 				<td th:text="${todo.createdBy}" />
