--- a/src/main/resources/templates/add-todo-list.html
+++ b/src/main/resources/templates/add-todo-list.html
@@ -15,24 +15,8 @@
 </head>
 <body>
 <div class="container">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <h1 class="navbar-brand">Retro Board</h1>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#"><span th:text="${time}"></span></a>
-                </li>
-                <li><a href="#">
-                <form action="/logout" method="POST">
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                    <input type="submit" class="btn btn-default" value="Logout" />
-                </form></a>
-                </li> 
-            </ul>
-        </div>
-    </nav>
+    <div th:insert="common/header :: common_navbar"></div>
+    <h1>Retro board</h1>
     <form action="/createTodo" method="POST">
         <div class="row form-row">
            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
