--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,8 +26,9 @@
 </style>
 </head>
 <body>
+    <div th:insert="common/header :: common_navbar"></div>
 	<!-- navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+	<!--  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
 		<div class="container">
 			<a class="navbar-brand" href="/"><img src="/images/rlogo.jpg" width="40" height="40"
 				alt="Home"><span class="align-middle font-weight-bold text-monospace">TechHelp</span></a>
@@ -64,7 +65,7 @@
 				</a>
 			</div>
 		</div>
-	</nav>
+	</nav>-->
 	<div class="container text-center">
 		<h2 class="mt-5">
 			Welcome to <img src="/images/rlogo.jpg" width=8% height=8% alt="Home">TechHelp
